# adf-manager

./: CMakeLists.txt  README.md
src/: adf-man.c
versions/: adfman_v1.0.deb
